tests/ui/unresolved-type.stderr
error[E0412]: cannot find type `L` in this scope
 --> tests/ui/unresolved-type.rs:5:17
  |
5 | #[stream(item = L)] //~ ERROR cannot find type `Left` in this scope
  |                 ^ not found in this scope
6 | async fn foo() {}
  |             - help: you might be missing a type parameter: `<L>`
